added SpriteSheet support

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -72,6 +72,14 @@
       <Project>{5042F635-B83A-4AB7-BA79-8C98FBB9879D}</Project>
       <Name>GameObjects</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Input\Input.csproj">
+      <Project>{ED612D7D-1653-4552-9E19-FF0F43DAB8BA}</Project>
+      <Name>Input</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MathFunctions\MathFunctions.csproj">
+      <Project>{8F4F4499-6C9E-4F7F-AE99-6833AC6A4EC6}</Project>
+      <Name>MathFunctions</Name>
+    </ProjectReference>
     <ProjectReference Include="..\NinjectModules\NinjectModules.csproj">
       <Project>{B2586BC7-C62C-472E-BC07-E8BBB4B504C2}</Project>
       <Name>NinjectModules</Name>
