--- a/Input/Input.csproj
+++ b/Input/Input.csproj
@@ -62,8 +62,12 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Direction.cs" />
+    <Compile Include="IInputManager.cs" />
     <Compile Include="InputManager.cs" />
     <Compile Include="InputModule.cs" />
+    <Compile Include="ISwipeListener.cs" />
+    <Compile Include="ITapListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
