--- a/NinjectModules/NinjectModules.csproj
+++ b/NinjectModules/NinjectModules.csproj
@@ -78,6 +78,10 @@
       <Project>{ED612D7D-1653-4552-9E19-FF0F43DAB8BA}</Project>
       <Name>Input</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MathFunctions\MathFunctions.csproj">
+      <Project>{8F4F4499-6C9E-4F7F-AE99-6833AC6A4EC6}</Project>
+      <Name>MathFunctions</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PublicIterfaces\PublicIterfaces.csproj">
       <Project>{07D7106A-09BC-4CA2-ACC4-EDF5A510E8A5}</Project>
       <Name>PublicIterfaces</Name>
