--- a/MathFunctions/MathFunctions.csproj
+++ b/MathFunctions/MathFunctions.csproj
@@ -48,6 +48,7 @@
     <Reference Include="Microsoft.Xna.Framework.GamerServices" />
     <Reference Include="Microsoft.Xna.Framework.Input.Touch" />
     <Reference Include="mscorlib" />
+    <Reference Include="Ninject, Version=3.0.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core">
@@ -59,9 +60,30 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MathFunctionsModule.cs" />
+    <Compile Include="Movement\IMovementListener.cs" />
+    <Compile Include="IMathFunctionsFactory.cs" />
+    <Compile Include="MathFunctionsFactory.cs" />
     <Compile Include="GaussianFunction.cs" />
+    <Compile Include="Movement\IMovementFunction.cs" />
+    <Compile Include="Movement\IPlayerMovementReceiver.cs" />
+    <Compile Include="Movement\PlayerMovementFunction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QadraticFunction.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GameObjects\GameObjects.csproj">
+      <Project>{5042F635-B83A-4AB7-BA79-8C98FBB9879D}</Project>
+      <Name>GameObjects</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Input\Input.csproj">
+      <Project>{ED612D7D-1653-4552-9E19-FF0F43DAB8BA}</Project>
+      <Name>Input</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PublicIterfaces\PublicIterfaces.csproj">
+      <Project>{07D7106A-09BC-4CA2-ACC4-EDF5A510E8A5}</Project>
+      <Name>PublicIterfaces</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
