--- a/Prefabricates/Prefabricates.csproj
+++ b/Prefabricates/Prefabricates.csproj
@@ -59,10 +59,25 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Gameplay\ICameraPositioner.cs" />
+    <Compile Include="Gameplay\Player.cs" />
+    <Compile Include="Gameplay\Scene2D.cs" />
     <Compile Include="Particles\Fog2D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GameObjects\GameObjects.csproj">
+      <Project>{5042F635-B83A-4AB7-BA79-8C98FBB9879D}</Project>
+      <Name>GameObjects</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Input\Input.csproj">
+      <Project>{ED612D7D-1653-4552-9E19-FF0F43DAB8BA}</Project>
+      <Name>Input</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MathFunctions\MathFunctions.csproj">
+      <Project>{8F4F4499-6C9E-4F7F-AE99-6833AC6A4EC6}</Project>
+      <Name>MathFunctions</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PublicIterfaces\PublicIterfaces.csproj">
       <Project>{07D7106A-09BC-4CA2-ACC4-EDF5A510E8A5}</Project>
       <Name>PublicIterfaces</Name>
