--- a/PublicIterfaces/PublicIterfaces.csproj
+++ b/PublicIterfaces/PublicIterfaces.csproj
@@ -63,30 +63,32 @@
     <Compile Include="BasicGameObjects\Drawable2DContainer.cs" />
     <Compile Include="BasicGameObjects\EmptyDrawable2DComposite.cs" />
     <Compile Include="GameObjectsFactories\IGameObjectsFactory.cs" />
+    <Compile Include="Graphics2d\IAnimatedSprite.cs" />
+    <Compile Include="Graphics2d\ICamera2D.cs" />
+    <Compile Include="Graphics2d\IVirtualScreen.cs" />
     <Compile Include="IDrawer.cs" />
-    <Compile Include="Input\IInputManager.cs" />
-    <Compile Include="ISpritesFactory.cs" />
-    <Compile Include="Input\IClickListener.cs" />
+    <Compile Include="Graphics2d\ISpritesFactory.cs" />
     <Compile Include="Sound\ISoundManager.cs" />
-    <Compile Include="ISpriteFontsProvider.cs" />
+    <Compile Include="Graphics2d\ISpriteFontsProvider.cs" />
     <Compile Include="BasicGameObjects\IFont.cs" />
     <Compile Include="IFontPresentation.cs" />
     <Compile Include="BasicGameObjects\IGameObject.cs" />
     <Compile Include="IMenuForm.cs" />
     <Compile Include="BasicGameObjects\Presentation\IPresentation.cs" />
-    <Compile Include="ISpriteDrawer.cs" />
+    <Compile Include="Graphics2d\ISpriteDrawer.cs" />
     <Compile Include="BasicGameObjects\GameObjectBase.cs" />
     <Compile Include="ObjectPool\IObjectsPool.cs" />
     <Compile Include="ObjectPool\IObjectsPoolsFactory.cs" />
     <Compile Include="BasicGameObjects\Presentation\ISpritePresentation.cs" />
-    <Compile Include="ISprite.cs" />
-    <Compile Include="ISpriteFontDrawer.cs" />
+    <Compile Include="Graphics2d\ISprite.cs" />
+    <Compile Include="Graphics2d\ISpriteFontDrawer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ISpriteDrawingVisitor.cs" />
+    <Compile Include="Graphics2d\ISpriteDrawingVisitor.cs" />
     <Compile Include="UserInterface\IButton.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Drawing\" />
+    <Folder Include="Input\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
