--- a/StateManagement/StateManagement.csproj
+++ b/StateManagement/StateManagement.csproj
@@ -66,6 +66,7 @@
     <Compile Include="IStateChangeListener.cs" />
     <Compile Include="IStateManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScreenChangeEventArgs.cs" />
     <Compile Include="StateManagementModule.cs" />
     <Compile Include="StateManager.cs" />
   </ItemGroup>
