--- a/HeavyBomberPrefabricates/HeavyBomberPrefabricates.csproj
+++ b/HeavyBomberPrefabricates/HeavyBomberPrefabricates.csproj
@@ -59,6 +59,11 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Gameplay\Bomb.cs" />
+    <Compile Include="Gameplay\GameplayFactory.cs" />
+    <Compile Include="Gameplay\IBomb.cs" />
+    <Compile Include="Gameplay\Player.cs" />
+    <Compile Include="Gameplay\Scene2D.cs" />
     <Compile Include="MainMenu\LargeCog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -67,13 +72,25 @@
       <Project>{5042F635-B83A-4AB7-BA79-8C98FBB9879D}</Project>
       <Name>GameObjects</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Input\Input.csproj">
+      <Project>{ED612D7D-1653-4552-9E19-FF0F43DAB8BA}</Project>
+      <Name>Input</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MathFunctions\MathFunctions.csproj">
       <Project>{8F4F4499-6C9E-4F7F-AE99-6833AC6A4EC6}</Project>
       <Name>MathFunctions</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Prefabricates\Prefabricates.csproj">
+      <Project>{767B961D-2371-4469-9D73-CB149E3F7167}</Project>
+      <Name>Prefabricates</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PublicIterfaces\PublicIterfaces.csproj">
       <Project>{07D7106A-09BC-4CA2-ACC4-EDF5A510E8A5}</Project>
       <Name>PublicIterfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SpriteSheetRuntime\SpriteSheetRuntime %28Phone%29.csproj">
+      <Project>{6D76C269-1388-421C-9057-71A1EC1D1E7A}</Project>
+      <Name>SpriteSheetRuntime %28Phone%29</Name>
     </ProjectReference>
     <ProjectReference Include="..\UserInterface\UserInterface.csproj">
       <Project>{15339542-6EE4-436B-8B0F-8CC9C73C7B07}</Project>
