--- a/HeavyBomber/HeavyBomber/HeavyBomber.csproj
+++ b/HeavyBomber/HeavyBomber/HeavyBomber.csproj
@@ -65,6 +65,10 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameData\CollisionMap.cs" />
+    <Compile Include="GameData\Scene.cs" />
+    <Compile Include="GameData\SceneProperties.cs" />
+    <Compile Include="GameData\Theme.cs" />
     <Compile Include="GameForms\AnimatedCogsMenu.cs" />
     <Compile Include="GameForms\MainMenu.cs" />
     <Compile Include="GameScreens\LevelScreen.cs" />
